# audio-tour-backend

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  GENERATION_FLOW.md  README.md  WINTER_LIGHTS_CONTEXT.md  check.sh  format.sh  pyproject.toml  requirements.txt  run_quality_checks.py  setup.py  wiki.ipynb  winter_lights_migrated.json  winter_lights_s3_data.json  winter_lights_with_audio.json  winter_lights_with_photos.json
.github/workflows/: deploy.yml
integration_tests/: test_google_places.py
lambda/audio-generation/: index.py
lambda/geolocation/: index.py
lambda/tour-generation/: benchmark_tts.py  index.py  requirements.txt
lambda/tour-pre-generation/: index.py
lambda/tour-preview/: index.py
scripts/: build_lambdas.sh  create_subset.py  generate_typescript_types.py  generate_winter_lights_s3_file.py  get_place_details.py  lint.py  migrate_winter_lights_paths.py  output_google_places.py  purge_cloudfront_cache.py  purge_data.py  stage1_transform_data.py  stage2_process_images.py  stage3_generate_audio.py  stage4_insert_to_dynamodb.py  test_poly.py  winter_lights_s3_subset.json  winter_lights_subset.json  winter_lights_subset_audio.json  winter_lights_subset_photos.json  winter_lights_transformed.json  winter_lights_transformed.report.txt
src/tensortours/lambda_handlers/: audio_generation.py  geolocation.py  get_on_demand_tour.py  get_places.py  get_preview.py  get_tour.py  poi_generate.py  poi_get.py  poi_insert.py  poi_query.py  poly_audio.py  tour_generation_pipeline.py  tour_pre_generation.py  tour_preview.py
src/tensortours/models/: __init__.py  api.py  generation.py  message.py  place.py  poi.py  tour.py
src/tensortours/services/: __init__.py  aws_poly.py  google_places.py  openai_client.py  supabase_client.py  tour_table.py  user_event_table.py
src/tensortours/services/generation/: __init__.py  deduplication.py  metadata_finalizer.py  tour_agent.py
src/tensortours/tools/: generate_preview_data.py
src/tensortours/utils/: __init__.py  aws.py  general_utils.py  script_utils.py
supabase/: config.toml
supabase/migrations/: 20260302000000_create_poi_tables.sql  20260304000000_add_excluded_status.sql
tensortours/: __init__.py
tensortours/lambda_handlers/: __init__.py  audio_generation.py  geolocation.py  tour_generation.py  tour_pre_generation.py  tour_preview.py
tensortours/models/: api.py  message.py  place.py  tour.py
tensortours/services/: places.py  tour_table.py
tensortours/utils/: aws.py
tests/: run_tests.py
tests/handlers/: test_get_tour.py
tests/lambda_handlers/: test_get_places.py  test_get_tour.py  test_get_tour_legacy.py
tests/models/: test_api_models.py  test_tour_models.py
tests/services/: test_aws_poly.py  test_tour_table_service.py  test_user_event_table.py
