[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensortours"
version = "0.1.0"
description = "Audio tour generation backend"
requires-python = ">=3.12"
authors = [
    {name = "TensorTours Team"}
]

dependencies = [
    "boto3>=1.28.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.3",
    "openai>=1.3.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.2",
    "googlemaps>=4.10.0",
    "boto3-stubs[polly,s3,secretsmanager,sqs,lambda,dynamodb]>=1.28.0",
    "mypy>=1.0.0",
    "types-requests>=2.31.0",
    "types-python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "moto>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pytest-flake8>=1.1.1",
    "pytest-black>=0.3.0",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
addopts = "--flake8 --black"
testpaths = ["tensortours", "tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "flake8: Run flake8 on Python source files",
    "black: Run black on Python source files",
]

[tool.flake8]
max-line-length = 100
exclude = ".git,__pycache__,build,dist,.venv,venv"
ignore = "E203, W503"  # Recommended when using Black
per-file-ignores = [
    "__init__.py:F401,F403",
    "tests/*:E501"
]
